# appsync-router

./: .gitignore  MANIFEST.in  README.md  README.rst  requirements.dev.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
appsync_router/: __init__.py  context.py  exceptions.py  matches.py  routes.py
docs/: Makefile  build.sh  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: custom.css
docs/build.bk/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/build.bk/.doctrees/: environment.pickle  index.doctree
docs/build.bk/.doctrees/appsync_router/: index.doctree
docs/build.bk/_sources/appsync_router/: index.rst.txt
docs/build.bk/appsync_router/: index.html
src/appsync_router/: __init__.py  exceptions.py  index.rst  resolver.py  router.py  types.py
src/appsync_router/scripts/: appsync-app-builder  appsync-router
src/appsync_router/templates/lambda/: .gitignore  setup.py
src/appsync_router/templates/lambda/src/lambda_function/: function.py
src/appsync_router/templates/resolver/: __init__.py  example.json  example.py  resolver_template.py
src/scripts/: appsync-app-builder  resolver_template.py
src/scripts/app_template/: __init__.py  config.json  defaults.py  second.py
