[metadata]
name = appsync-router
author = Joseph Wortmann
author_email = jwortmann@quinovas.com
version = 4.0.3
description = A framework easily routing AppSync requests using AWS Lambda
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
url = https://github.com/QuiNovas/appsync-router
keywords = appsync, lambda
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = true
install_requires = 
    multipledispatch
python_requires = >=3.9